# ollama_rust_sdk

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  OLLAMA_CURL_DOCS.md  README.md  SECURITY.md  clippy.toml  deny.toml  tarpaulin-report.html
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-release.yml  ci.yml  code-quality.yml  codeql.yml  dependencies.yml  docker.yml  docs.yml  ollama-integration.yml  release.yml  security.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  RELEASING.md
examples/: basic_generation.rs  embeddings.rs  parallel_tools.rs  streaming_chat.rs  streaming_tools.rs  streaming_tools_advanced.rs  streaming_tools_final.rs  tool_calling.rs  tool_calling_demo.rs  tool_test.rs
src/: client.rs  config.rs  error.rs  lib.rs  main.rs  types.rs
src/api/: blobs.rs  chat.rs  embeddings.rs  generate.rs  mod.rs  models.rs
src/builders/: chat_builder.rs  generate_builder.rs  mod.rs
src/models/: chat.rs  common.rs  common_test.rs  embedding.rs  generation.rs  mod.rs  model_info.rs  options.rs
src/streaming/: mod.rs  stream.rs
src/utils/: http.rs  mod.rs
tests/: README.md  integration.rs  performance.rs
tests/integration/: mod.rs
